frontend/test/should_fail/exec_035c.grg
rule r {
  iterated {
    n:Node;
    modify {
      exec(r);
    }
  }  
  
  modify {
  }
}